--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,10 @@ jobs:
       with:
         python-version: '3.9'
         
-    - name: Install NSIS
+    - name: Install NSIS and 7-Zip
       run: |
         choco install nsis -y
+        choco install 7zip -y
         refreshenv
         $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
         
@@ -41,75 +42,13 @@ jobs:
     - name: Create Build Package
       shell: pwsh
       run: |
-        # Set variables
+        # Create scripts directory if it doesn't exist
+        New-Item -Path ".github\scripts" -ItemType Directory -Force
+        
+        # Run the build package script
         $version = "${{ github.ref_name }}"
-        $buildDir = "releases\$version\build"
-        $sourceDir = "$version\SimulanisLogin"
-        
-        Write-Host "Current directory: $(Get-Location)"
-        Write-Host "Source directory: $sourceDir"
-        Write-Host "Build directory: $buildDir"
-        
-        # List all directories and files
-        Write-Host "Available directories and files:"
-        Get-ChildItem -Recurse | ForEach-Object { Write-Host $_.FullName }
-        
-        # Create build directory
-        New-Item -Path $buildDir -ItemType Directory -Force
-        
-        # Copy files if source exists
-        if (Test-Path $sourceDir) {
-            Write-Host "Copying files from $sourceDir to $buildDir"
-            
-            # Copy main executable and config
-            Copy-Item -Path "$sourceDir\SimulanisLogin.exe" -Destination $buildDir -Force
-            Copy-Item -Path "$sourceDir\config.json" -Destination "$buildDir\headless_config.json" -Force
-            
-            # Copy directories
-            $dirsToCopy = @("Icons", "Logos", "_internal")
-            foreach ($dir in $dirsToCopy) {
-                $sourcePath = Join-Path $sourceDir $dir
-                if (Test-Path $sourcePath) {
-                    Copy-Item -Path $sourcePath -Destination $buildDir -Recurse -Force
-                    Write-Host "Copied $dir directory successfully"
-                } else {
-                    Write-Warning "Source directory not found: $sourcePath"
-                }
-            }
-            
-            # Create batch files
-            @"
-@echo off
-start "" "%~dp0SimulanisLogin.exe"
-"@ | Out-File -FilePath "$buildDir\Start Simulanis Login.bat" -Encoding ASCII -Force
-
-            @"
-@echo off
-start "" "%~dp0SimulanisLogin.exe" --gui
-"@ | Out-File -FilePath "$buildDir\Start Simulanis Login (GUI).bat" -Encoding ASCII -Force
-            
-            # Create zip archive
-            $zipPath = "releases\$version\Simulanis_Auto_Login_$($version)_Build.zip"
-            Write-Host "Creating zip archive at: $zipPath"
-            Compress-Archive -Path "$buildDir\*" -DestinationPath $zipPath -Force
-            
-            # Verify zip creation
-            if (Test-Path $zipPath) {
-                Write-Host "Zip archive created successfully"
-                Get-Item $zipPath | Select-Object FullName, Length
-            } else {
-                Write-Error "Failed to create zip archive"
-                exit 1
-            }
-            
-            # Cleanup build directory
-            Remove-Item -Path $buildDir -Recurse -Force
-        } else {
-            Write-Error "Source directory not found: $sourceDir"
-            Write-Host "Current directory contents:"
-            Get-ChildItem -Recurse | ForEach-Object { Write-Host $_.FullName }
-            exit 1
-        }
+        Write-Host "Running build package script for version: $version"
+        .\.github\scripts\create-build-package.ps1 -Version $version
         
     - name: Create Release Notes
       run: |
