--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -5,12 +5,18 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  actions: write
+
 jobs:
   build:
     runs-on: windows-latest
     
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     
     - name: List Directory Contents
       run: |
@@ -32,7 +38,7 @@ jobs:
         cd ..
         
     - name: Upload Installer
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v2.3.1
       with:
         name: SimulanisAutoLogin_Setup
         path: installer/SimulanisAutoLogin_Setup.exe
