--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -14,11 +14,12 @@ jobs:
     runs-on: windows-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
     
     - name: List Directory Contents
+      shell: pwsh
       run: |
         Write-Host "Current directory: $PWD"
         Write-Host "Directory contents:"
@@ -38,7 +39,7 @@ jobs:
         cd ..
         
     - name: Upload Installer
-      uses: actions/upload-artifact@v2.3.1
+      uses: actions/upload-artifact@v4
       with:
         name: SimulanisAutoLogin_Setup
         path: installer/SimulanisAutoLogin_Setup.exe
